changed patient repo to extend jpa specification and removed few comments and changed follow dto to store health level and changed patient entity to accomodate the respective changes