@@ -12,11 +12,13 @@ import com.beehyv.tbalert.tbalertbackend.repository.ContactScreeningRepository;
 import com.beehyv.tbalert.tbalertbackend.repository.PatientRepo;
 import com.beehyv.tbalert.tbalertbackend.service.PatientFollowUpService;
 import com.beehyv.tbalert.tbalertbackend.service.PatientRegistrationService;
+import com.beehyv.tbalert.tbalertbackend.specifications.PatientSpecification;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFFont;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.io.File;
@@ -25,6 +27,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -99,7 +102,7 @@ public class PatientRegistrationServiceImpl implements PatientRegistrationServic
         log.info("Service getAll patients");
         List<Patient>patients=patientRepo.findAll();
         if(!patients.isEmpty()){
-            return patients.stream().map(patientMapper::toPatientOutputDTO).collect(Collectors.toList());
+            return patients.stream().map(patientMapper::toPatientOutputDTO).toList();
         }
         return null;
     }
@@ -109,5 +112,14 @@ public class PatientRegistrationServiceImpl implements PatientRegistrationServic
         log.info("Service getPatientByName patientName: {}", patientName);
         return patientRepo.findAllByFirstNameContainingOrLastNameContaining(patientName,patientName).stream().map(patientMapper::toPatientOutputDTO).toList();
     }
+
+    @Override
+    public List<PatientOutputDTO> getFilteredPatients(Map<String, Object> filters) {
+        log.info("Service getFilteredPatients filters: {}", filters);
+        Specification<Patient> specification = PatientSpecification.getPatientsByFilter(filters);
+        List<Patient>patients=patientRepo.findAll(specification);
+        return patients.stream().map(patientMapper::toPatientOutputDTO).toList();
+    }
+
 
 }
